src/test/deca/codegen/invalid/obtained_res/invalidcastdeca.res
la conversion (cast) est incorrecte
